[gd_scene load_steps=11 format=3 uid="uid://boskl008sic56"]

[ext_resource type="Script" path="res://scripts/gui/post_radial_assignment.gd" id="1_2cqh1"]
[ext_resource type="Theme" uid="uid://dexax20p2eewp" path="res://assets/themes/base_theme.tres" id="1_cgsud"]
[ext_resource type="Texture2D" uid="uid://cymum3g0jnd7l" path="res://assets/sprites/popup_panel_background_75.png" id="2_kog7f"]
[ext_resource type="Texture2D" uid="uid://filfa2qem5i2" path="res://assets/icons/drama-masks.svg" id="5_aueon"]
[ext_resource type="Theme" uid="uid://dlrdh5kyv25hr" path="res://assets/themes/handwriting_label_theme.tres" id="5_b73pw"]
[ext_resource type="Texture2D" uid="uid://d313p06brjxs0" path="res://assets/icons/charm_2.svg" id="6_2mer5"]
[ext_resource type="Texture2D" uid="uid://ctiq8sa8m5iv" path="res://assets/sprites/close_ribbon_black.png" id="7_a7quo"]
[ext_resource type="Texture2D" uid="uid://5a71o8frvad4" path="res://assets/icons/smarts_2.svg" id="7_n8jn2"]
[ext_resource type="Texture2D" uid="uid://5vk04yychida" path="res://assets/sprites/close_ribbon_white.png" id="8_iwpau"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7d8bq"]

[node name="Post Radial Assignment" type="Window" node_paths=PackedStringArray("task_title", "continue_button", "agent_card_grid", "asigned_label", "assigned_agents_label", "charm_label", "subtlety_label", "smarts_label")]
transparent_bg = true
initial_position = 1
size = Vector2i(800, 700)
exclusive = true
unresizable = true
borderless = true
transparent = true
theme = ExtResource("1_cgsud")
script = ExtResource("1_2cqh1")
task_title = NodePath("NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/Label")
continue_button = NodePath("NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button")
agent_card_grid = NodePath("NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/AgentsVBoxContainer/ScrollContainer/GridContainer")
asigned_label = NodePath("NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Label")
assigned_agents_label = NodePath("NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/AssignedAgents")
charm_label = NodePath("NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/CharmHBoxContainer/Label")
subtlety_label = NodePath("NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/SubtletyHBoxContainer/Label")
smarts_label = NodePath("NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/SmartsHBoxContainer/Label")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kog7f")
patch_margin_left = 90
patch_margin_top = 53
patch_margin_right = 138
patch_margin_bottom = 26

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 2
offset_right = 750.0
offset_bottom = 600.0
theme_override_constants/margin_left = 90
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 82
theme_override_constants/margin_bottom = -86

[node name="LeftPanelContainer" type="PanelContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "<title>"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AgentsVBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/AgentsVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/AgentsVBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
text = "Assigned:"
autowrap_mode = 2

[node name="AssignedAgents" type="Label" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme = ExtResource("5_b73pw")
theme_override_font_sizes/font_size = 22
vertical_alignment = 1
autowrap_mode = 2

[node name="Separator" type="HSeparator" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_7d8bq")

[node name="Mods" type="VBoxContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ModifiersHBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Mods"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="ModifiersLabel" type="Label" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Mods/ModifiersHBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Separator2" type="HSeparator" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Mods"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Stats" type="VBoxContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="DurationHBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Stats"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="DurationLabel" type="Label" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Stats/DurationHBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Duration: 0 Turns"

[node name="Separator3" type="HSeparator" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Stats"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="DetectionHBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Stats"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="DetectionLabel" type="Label" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Stats/DetectionHBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Chance of Detection: 0"

[node name="Separator" type="HSeparator" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Stats"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SuccessHBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Stats"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="SuccessLabel" type="Label" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Stats/SuccessHBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Chance of Success: 0"

[node name="Separator2" type="HSeparator" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/Stats"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="SubtletyHBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/SubtletyHBoxContainer"]
layout_mode = 2
texture = ExtResource("5_aueon")
expand_mode = 3

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/SubtletyHBoxContainer"]
layout_mode = 2
text = "Subtlety: 0"

[node name="Separator" type="HSeparator" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="CharmHBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/CharmHBoxContainer"]
layout_mode = 2
texture = ExtResource("6_2mer5")
expand_mode = 3

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/CharmHBoxContainer"]
layout_mode = 2
text = "Charm: 0"

[node name="Separator2" type="HSeparator" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SmartsHBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/SmartsHBoxContainer"]
layout_mode = 2
texture = ExtResource("7_n8jn2")
expand_mode = 3

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/SmartsHBoxContainer"]
layout_mode = 2
text = "Smarts: 0"

[node name="Button" type="Button" parent="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
disabled = true
text = "Assign Task"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 100.0
grow_horizontal = 0
theme_override_constants/margin_right = 20

[node name="TextureButton" type="TextureButton" parent="MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("7_a7quo")
texture_pressed = ExtResource("7_a7quo")
texture_hover = ExtResource("8_iwpau")

[connection signal="pressed" from="NinePatchRect/MarginContainer/LeftPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/TextureButton" to="." method="_on_close_button_pressed"]
